--- a/src/main/resources/templates/admin/user/update.html
+++ b/src/main/resources/templates/admin/user/update.html
@@ -136,6 +136,7 @@
                         class="form-select"
                         name="roleIds"
                         multiple="multiple"
+                        disabled
                       >
                         <option
                           th:each="r : ${allRoles}"
