--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -51,6 +51,24 @@
             </a>
           </div>
 
+          <div th:if="${permissions.contains('GET /admin/subject-department')}">
+            <a class="nav-link" href="/admin/subject-department">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-layer-group"></i>
+              </div>
+              Tổ bộ môn
+            </a>
+          </div>
+
+          <div th:if="${permissions.contains('GET /admin/teacher')}">
+            <a class="nav-link" href="/admin/teacher">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-chalkboard-teacher"></i>
+              </div>
+              Giáo viên
+            </a>
+          </div>
+
           <div th:if="${permissions.contains('GET /admin/class')}">
             <a class="nav-link" href="/admin/class">
               <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
