--- a/src/main/resources/templates/admin/class/show.html
+++ b/src/main/resources/templates/admin/class/show.html
@@ -40,6 +40,7 @@
                   >
                     <h3>Danh sách lớp</h3>
                     <a
+                      th:if="${permissions.contains('GET /admin/class/create')}"
                       th:href="@{/admin/class/create}"
                       class="btn btn-primary"
                       sec:authorize="hasAnyRole('VICE_PRINCIPAL', 'PRINCIPAL')"
@@ -82,18 +83,21 @@
                         </td>
                         <td>
                           <a
+                            th:if="${permissions.contains('GET /admin/class/student/add/{classId}')}"
                             th:href="@{'/admin/class/student/add/' + ${classRoom.id}}"
                             class="btn btn-success btn-sm"
                             >Xem</a
                           >
 
                           <a
+                            th:if="${permissions.contains('GET /admin/class/update/{id}')}"
                             th:href="@{'/admin/class/update/' + ${classRoom.id}}"
                             class="btn btn-warning btn-sm mx-1"
                             sec:authorize="hasAnyRole('VICE_PRINCIPAL', 'PRINCIPAL')"
                             >Sửa</a
                           >
                           <a
+                            th:if="${permissions.contains('GET /admin/class/delete/{id}')}"
                             th:href="@{'/admin/class/delete/' + ${classRoom.id}}"
                             class="btn btn-danger btn-sm"
                             sec:authorize="hasAnyRole('VICE_PRINCIPAL', 'PRINCIPAL')"
