--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -8,14 +8,14 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-tachometer-alt"></i>
               </div>
-              Dashboard
+              Bảng điều khiển
             </a>
           </div>
 
           <div th:if="${permissions.contains('GET /admin/user')}">
             <a class="nav-link" href="/admin/user">
               <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
-              User
+              Quản lý người dùng
             </a>
           </div>
 
@@ -24,14 +24,14 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-user-shield"></i>
               </div>
-              Role
+              Quản lý vai trò
             </a>
           </div>
 
           <div th:if="${permissions.contains('GET /admin/permission')}">
             <a class="nav-link" href="/admin/permission">
               <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
-              Permission
+              Quản lý permision
             </a>
           </div>
 
@@ -40,14 +40,14 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-calendar-alt"></i>
               </div>
-              Niên khóa
+              Quản lý Niên khóa
             </a>
           </div>
 
           <div th:if="${permissions.contains('GET /admin/subject')}">
             <a class="nav-link" href="/admin/subject">
               <div class="sb-nav-link-icon"><i class="fas fa-book"></i></div>
-              Môn học
+              Quản lý Môn học
             </a>
           </div>
 
@@ -65,14 +65,14 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-chalkboard-teacher"></i>
               </div>
-              Giáo viên
+              Quản lý Giáo viên
             </a>
           </div>
 
           <div th:if="${permissions.contains('GET /admin/class')}">
             <a class="nav-link" href="/admin/class">
               <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
-              Class
+              Quản lý Lớp học
             </a>
           </div>
 
@@ -81,7 +81,7 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-layer-group"></i>
               </div>
-              Khối
+              Quản lý Khối
             </a>
           </div>
 
@@ -90,7 +90,7 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-book-open"></i>
               </div>
-              Course
+              Quản lý bài giảng
             </a>
           </div>
 
@@ -99,7 +99,7 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-file-alt"></i>
               </div>
-              Exam
+              Quản lý đề thi
             </a>
           </div>
 
@@ -108,7 +108,7 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-clipboard-check"></i>
               </div>
-              Test
+              Quản lý kì kiểm tra
             </a>
           </div>
 
@@ -117,14 +117,14 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-envelope"></i>
               </div>
-              Send Email
+              Gửi Email
             </a>
           </div>
 
           <div th:if="${permissions.contains('GET /admin/email')}">
             <a class="nav-link" href="/admin/email">
               <div class="sb-nav-link-icon"><i class="fas fa-inbox"></i></div>
-              Receive Email
+              Nhận Email
             </a>
           </div>
 
@@ -137,14 +137,13 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-clipboard-list"></i>
               </div>
-              Activity Log
+              Nhật ký hoạt động
             </a>
           </div>
         </div>
       </div>
       <div class="sb-sidenav-footer">
         <div class="small">Logged in as:</div>
-        Start Bootstrap
       </div>
     </nav>
   </div>
