--- a/src/main/resources/templates/admin/role/show.html
+++ b/src/main/resources/templates/admin/role/show.html
@@ -48,7 +48,11 @@
                     class="d-flex justify-content-between align-items-center"
                   >
                     <h3>Danh sách Role</h3>
-                    <a th:href="@{/admin/role/create}" class="btn btn-primary">
+                    <a
+                      th:if="${permissions.contains('GET /admin/role/create')}"
+                      th:href="@{/admin/role/create}"
+                      class="btn btn-primary"
+                    >
                       + Tạo Role
                     </a>
                   </div>
@@ -75,11 +79,13 @@
 
                         <td>
                           <a
+                            th:if="${permissions.contains('GET /admin/role/update/{id}')}"
                             th:href="@{'/admin/role/update/' + ${r.id}}"
                             class="btn btn-warning btn-sm mx-1"
                             >Sửa</a
                           >
                           <a
+                            th:if="${permissions.contains('GET /admin/role/delete/{id}')}"
                             th:href="@{'/admin/role/delete/' + ${r.id}}"
                             class="btn btn-danger btn-sm"
                             >Xóa</a
