--- a/src/main/resources/templates/admin/schoolyear/show.html
+++ b/src/main/resources/templates/admin/schoolyear/show.html
@@ -40,6 +40,7 @@
                   >
                     <h3>Danh sách niên khóa</h3>
                     <a
+                      th:if="${permissions.contains('GET /admin/school-year/create')}"
                       th:href="@{/admin/school-year/create}"
                       class="btn btn-primary"
                       >+ Tạo niên khóa</a
@@ -71,11 +72,13 @@
                         </td>
                         <td>
                           <a
+                            th:if="${permissions.contains('GET /admin/school-year/update/{id}')}"
                             th:href="@{'/admin/school-year/update/' + ${year.id}}"
                             class="btn btn-warning btn-sm mx-1"
                             >Sửa</a
                           >
                           <a
+                            th:if="${permissions.contains('GET /admin/school-year/delete/{id}')}"
                             th:href="@{'/admin/school-year/delete/' + ${year.id}}"
                             class="btn btn-danger btn-sm"
                             >Xóa</a
