--- a/src/main/resources/templates/admin/email/email_detail.html
+++ b/src/main/resources/templates/admin/email/email_detail.html
@@ -54,7 +54,7 @@
     </style>
   </head>
 
-  <body class="sb-nav-fixed sb-sidenav-toggled">
+  <body class="sb-nav-fixed">
     <div th:replace="admin/layout/header"></div>
 
     <div id="layoutSidenav">
