--- a/src/main/resources/templates/admin/role/show.html
+++ b/src/main/resources/templates/admin/role/show.html
@@ -30,7 +30,7 @@
     </style>
   </head>
   <div th:replace="admin/layout/header"></div>
-  <body class="sb-nav-fixed sb-sidenav-toggled">
+  <body class="sb-nav-fixed">
     <div id="layoutSidenav">
       <div th:replace="admin/layout/sidebar"></div>
       <div id="layoutSidenav_content">
