--- a/src/main/resources/templates/admin/email/show.html
+++ b/src/main/resources/templates/admin/email/show.html
@@ -68,7 +68,7 @@
     </style>
   </head>
 
-  <body class="sb-nav-fixed sb-sidenav-toggled">
+  <body class="sb-nav-fixed">
     <div th:replace="admin/layout/header"></div>
 
     <div id="layoutSidenav">
