--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -142,8 +142,9 @@
           </div>
         </div>
       </div>
-      <div class="sb-sidenav-footer">
-        <div class="small">Logged in as:</div>
+      <div class="sb-sidenav-footer text-center">
+        <div class="small">Đang đăng nhập với:</div>
+        <strong th:text="${session.fullName}">Người dùng</strong>
       </div>
     </nav>
   </div>
