--- a/src/main/resources/templates/admin/permission/detail.html
+++ b/src/main/resources/templates/admin/permission/detail.html
@@ -27,9 +27,16 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h1 class="mt-4">Permission</h1>
+            <h1 class="mt-4" th:text="'Permission - ' + ${moduleName}">
+              Permission
+            </h1>
             <ol class="breadcrumb mb-4">
-              <li class="breadcrumb-item active">Permission</li>
+              <li class="breadcrumb-item">
+                <a th:href="@{/admin/permission}">Module</a>
+              </li>
+              <li class="breadcrumb-item active" th:text="${moduleName}">
+                User
+              </li>
             </ol>
 
             <div class="mt-5">
@@ -95,33 +102,41 @@
                   <!-- Pagination -->
                   <nav aria-label="Page navigation">
                     <ul class="pagination justify-content-center">
-                      <li class="page-item">
+                      <!-- Nút Previous -->
+                      <li
+                        class="page-item"
+                        th:classappend="${currentPage == 1} ? ' disabled'"
+                      >
                         <a
                           class="page-link"
-                          th:classappend="${currentPage == 1} ? ' disabled'"
-                          th:href="@{'/admin/permission?page=' + ${currentPage - 1}}"
+                          th:href="@{/admin/permission/module/{moduleName}(moduleName=${moduleName}, page=${currentPage - 1})}"
                           aria-label="Previous"
                         >
                           <span aria-hidden="true">&laquo;</span>
                         </a>
                       </li>
+
+                      <!-- Các trang -->
                       <li
                         class="page-item"
                         th:each="i : ${#numbers.sequence(1, totalPages)}"
+                        th:classappend="${i == currentPage} ? ' active'"
                       >
                         <a
                           class="page-link"
-                          th:classappend="${i == currentPage} ? ' active'"
-                          th:href="@{'/admin/permission?page=' + ${i}}"
+                          th:href="@{/admin/permission/module/{moduleName}(moduleName=${moduleName}, page=${i})}"
                           th:text="${i}"
-                          >1</a
-                        >
+                        ></a>
                       </li>
-                      <li class="page-item">
+
+                      <!-- Nút Next -->
+                      <li
+                        class="page-item"
+                        th:classappend="${currentPage == totalPages} ? ' disabled'"
+                      >
                         <a
                           class="page-link"
-                          th:classappend="${currentPage == totalPages} ? ' disabled'"
-                          th:href="@{'/admin/permission?page=' + ${currentPage + 1}}"
+                          th:href="@{/admin/permission/module/{moduleName}(moduleName=${moduleName}, page=${currentPage + 1})}"
                           aria-label="Next"
                         >
                           <span aria-hidden="true">&raquo;</span>
