--- a/src/main/resources/templates/admin/user/show.html
+++ b/src/main/resources/templates/admin/user/show.html
@@ -101,7 +101,7 @@
                         <a
                           class="page-link"
                           th:classappend="${currentPage == 1} ? ' disabled'"
-                          th:href="@{'/admin/user?page=' + ${currentPage - 1}}"
+                          th:href="@{'/admin/user/group/STAFF?page=' + ${currentPage - 1}}"
                           aria-label="Previous"
                         >
                           <span aria-hidden="true">&laquo;</span>
@@ -115,7 +115,7 @@
                         <a
                           class="page-link"
                           th:classappend="${i == currentPage} ? ' active'"
-                          th:href="@{'/admin/user?page=' + ${i}}"
+                          th:href="@{'/admin/user/group/STAFF?page=' + ${i}}"
                           th:text="${i}"
                           >1</a
                         >
@@ -125,7 +125,7 @@
                         <a
                           class="page-link"
                           th:classappend="${currentPage == totalPages} ? ' disabled'"
-                          th:href="@{'/admin/user?page=' + ${currentPage + 1}}"
+                          th:href="@{'/admin/user/group/STAFF?page=' + ${currentPage + 1}}"
                           aria-label="Next"
                         >
                           <span aria-hidden="true">&raquo;</span>
