--- a/src/main/resources/templates/admin/class/delete.html
+++ b/src/main/resources/templates/admin/class/delete.html
@@ -50,7 +50,7 @@
                     </div>
                   </div>
 
-                  <form th:action="@{/admin/Class/delete}" method="post">
+                  <form th:action="@{/admin/class/delete}" method="post">
                     <div class="mb-3" style="display: none">
                       <label class="form-label">Id:</label>
                       <input type="hidden" name="id" th:value="${id}" />
