--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -108,7 +108,7 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-clipboard-check"></i>
               </div>
-              Quản lý kì kiểm tra
+              Kì kiểm tra
             </a>
           </div>
 
