--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -116,7 +116,7 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-clipboard-check"></i>
               </div>
-              Kì kiểm tra
+              Kỳ kiểm tra
             </a>
           </div>
 
